atualizar senha corrigido

--- a/SupplierRanking/Views/Home/SobreNos.cshtml
+++ b/SupplierRanking/Views/Home/SobreNos.cshtml
@@ -100,7 +100,7 @@
                 <div>
                     <div class="media d-block media-custom text-center">
                         <img class="img-fluid"
-                             src="/Content/images/person_1.jpg" 
+                             src="~/Content/images/laressasite2.png" 
                              alt="Image Placeholder">
 
                         <div class="media-body p-3">
@@ -164,7 +164,7 @@
                 <div>
                     <div class="media d-block media-custom text-center">
                         <img class="img-fluid"
-                             src="~/Content/images/valmir255.png" 
+                             src="~/Content/images/valmir2.png" 
                              alt="Image Placeholder">
                         <div class="media-body p-3">
                             <h3 class="name">Valmir Junior</h3>
