--- a/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
@@ -12,7 +12,7 @@
     <!--- Formulario de Nova Senha --->
 
     <form class="row nova-senha-comprador-form justify-content-center pt-5 mt-4"
-          method="post" action="../Fornecedor/UpdateSenha">
+          method="post" action="/Fornecedor/UpdateSenha">
 
         <div class="row col-12 d-flex justify-content-center mb-5">
             Segue abaixo nossas recomendações para a criação de uma senha:
@@ -33,12 +33,17 @@
 
                 <!--- Senha --->
                 <div class="wrap-input mb-4">
-                    <input class="input input-senha required-field" type="password" name="senhaNova" placeholder="* Senha">
+                    <input class="input input-senha required-field" type="password" name="senha" placeholder="* Senha Atual">
+                </div>
+
+                <!--- Nova Senha --->
+                <div class="wrap-input mb-4">
+                    <input class="input input-senha required-field" type="password" name="novaSenha" placeholder="* Nova Senha">
                 </div>
 
                 <!--- Confirmar Senha --->
                 <div class="wrap-input">
-                    <input class="input input-senha required-field" type="password" name="confirmaSenhaNova" placeholder="* Confirmar Senha">
+                    <input class="input input-senha required-field" type="password" name="senhaConfirma" placeholder="* Confirmar Senha">
                 </div>
             </div>
 
