--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -31,12 +31,16 @@
                                     @*<div class="col-10">*@
                                     @if (item.Imagem64 == "")
                                     {
-                                        <img src="~/Content/images/iconecor.png" height="100" width="100" />
+                                        <a href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                            <img src="~/Content/images/iconecor.png" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px white; border: 4px dotted white;"/>
+                                        </a>
                                     }
                                     else
                                     {
                                         String imagem64 = string.Format("data:image/jpeg;base64,{0}", item.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
-                                        <img src="@imagem64" height="100" width="100" />
+                                        <a href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                            <img src="@imagem64" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px white; border: 4px dotted white;"/>
+                                        </a>
                                     }
                                     @*</div>*@
                                 </div>
@@ -113,12 +117,16 @@
                                     @*<div class="col-10">*@
                                     @if (item.Imagem64 == "")
                                     {
-                                        <img src="~/Content/images/iconecor.png" height="100" width="100" />
+                                        <a href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                            <img src="~/Content/images/iconecor.png" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px black;"/>
+                                        </a>
                                     }
                                     else
                                     {
                                         String imagem64 = string.Format("data:image/jpeg;base64,{0}", item.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
-                                        <img src="@imagem64" height="100" width="100" />
+                                        <a href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
+                                            <img src="@imagem64" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px black;"/>
+                                        </a>
                                     }
                                     @*</div>*@
                                 </div>
