--- a/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingPremium.cshtml
@@ -28,12 +28,12 @@
                             @*<div class="col-10">*@
                             @if (item.Imagem64 == "")
                             {
-                                <img src="/Content/images/iconecor.png" height="100" width="100" />
+                                <img src="/Content/images/iconecor.png" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px white; border: 4px dotted white;"/>
                             }
                             else
                             {
                                 String imagem64 = string.Format("data:image/jpeg;base64,{0}", item.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
-                                <img src="@imagem64" height="100" width="100" />
+                                <img src="@imagem64" height="100" width="100" style="border-radius: 50%; box-shadow: 0px 0px 9px white; border: 4px dotted white;"/>
                             }
                             
                             @*</div>*@
