--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -29,7 +29,7 @@
                         else
                         {
                             String imagem64 = string.Format("data:image/jpeg;base64,{0}", Model.Imagem64); //PRECISA DISSO PRA FUNCIONAR A IMAGEM
-                            <img src="@imagem64" height="210" width="210" style="border-radius: 50%;"/>
+                            <img src="@imagem64" height="210" width="210" style="border-radius: 50%;box-shadow: 1px 1px 22px #000;border: 4px solid #d0a748;"/>
                         }                                                                     
                     </div>
                    
@@ -46,9 +46,9 @@
 
 
                     <div style="position: absolute;left: 50%;margin-top: 103px;">
-                        <span  style=" color: orange;" class="fa fa-star checked"></span>
-                        <span style=" color: orange;" class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star "></span>
+                        <span class="fa fa-star "></span>
+                        <span class="fa fa-star "></span>
                         <span class="fa fa-star"></span>
                         <span class="fa fa-star"></span>
 
