--- a/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
@@ -15,6 +15,8 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>@ViewBag.Title - Supplier Ranking</title>
+
         @*<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">*@
@@ -24,16 +26,20 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">*@
-        
-        <!-- Our Custom CSS -->
 
+        <!-- Our Custom CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
         <link rel="stylesheet" href="~/Content/config/css/style.css" />
+        <link rel="stylesheet" href="~/Content/css/style.css">
         <link rel="stylesheet" href="~/Content/css/style_login.css" />
         <link rel="stylesheet" href="~/Content/css/checkbox-home-logada.css" />
-        <link rel="stylesheet" href="~/Content/css/style_logada.css" />
         <link rel="stylesheet" href="~/Content/config/css/avaliar-star.css" />
-       
+        <link rel="stylesheet" href="~/Content/css/modal.css" />
+        <link rel="stylesheet" href="~/Content/css/style_logada.css" />
+
+        <!-- Logo da Aba -->
+        <link rel="icon" href="~/Content/images/logo.png" type="image/x-icon" />
+
         <!-- Font Awesome JS -->
         @*<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>*@
@@ -55,7 +61,7 @@
                                 <button type="submit" class="btn-pesquisa ml-2 mr-4"></button>
 
                                 <button type="button" id="btfiltro" class="btn-filtro" 
-                                        onclick="filtro()" data-toggle="modal" data-target="#myModal"></button>
+                                         data-toggle="modal" data-target="#myModal"></button>
                         </div>
                     </form>
                 </nav>
@@ -63,97 +69,71 @@
 
             <!-- Menu Lateral -->
             <nav id="sidebar">
-                <div class="sidebar-header" style="height: 104px;">
-                    <h3>Supplier Ranking</h3>
+                <div class="sidebar-header d-flex align-items-center">
+                    <h4 class="m-0">Supplier Ranking</h4>
                 </div>
 
-                <!-- Perfil do login -->
-                <ul class="list-unstyled components">
-                    <a style="display:flex; justify-content:center;">Bem-vindo!</a>
-                    @if (Session["UserFornecedor"] != null)
-                    {
-                        <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
-                            <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 10px auto auto 25px;" />
-                        </a>
-                        <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
-                    }
-                    else if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
-                    {
-                        <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
-                        <img src="~/Content/images/user.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 10px auto auto 25px;" />
-                    }
-                    <br />
-                    <ul class="list-unstyled components"></ul>
+                <div class="d-flex align-items-center mt-5" style="flex-direction: column;">
+                     <!-- Perfil do login -->
+                    <ul class="list-unstyled nav-menu pt-5 pb-5">
+                        <li class="d-flex align-items-center">
+                            <h5 class="mb-4">Bem-vindo!</h5>
 
-                    <li>
-                        @if (Session["UserPessoaFisica"] != null)
-                        {
-                            <a style="text-decoration: none;font-family: inherit;"
-                            href="/Comprador/UpdatePessoaFisica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
-                        }
-                        else if (Session["UserPessoaJuridica"] != null)
-                        {
-                            <a style="text-decoration: none;font-family: inherit;"
-                            href="/Comprador/UpdatePessoaJuridica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
-                        }
-                        else if (Session["UserFornecedor"] != null)
-                        {
-                            <a style="text-decoration: none;font-family: inherit;" 
-                            href="/Fornecedor/UpdateFornecedor/?Cnpj=@Session["UserFornecedor"].ToString()" aria-expanded="false">Editar Perfil</a>
-                        }
-                    </li>
+                            @if (Session["UserFornecedor"] != null)
+                            {
+                                <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
+                                    <img src="/Content/images/iconecor.png" id="perfil" />
+                                </a>
+                            }
+                            else if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
+                            {
+                                <img src="~/Content/images/user.png" id="perfil" />
+                            }
 
-                    <li>
-                        <a style="text-decoration: none; font-family: inherit;"
-                        href="/Comprador/UpdateSenha/" aria-expanded="false">Alterar Senha</a>
-                    </li>
+                            <h5 class="mt-4">@Session["NomeUsuario"].ToString()</h5>
+                        </li>
+                    </ul>
 
-                    <li>
-                        <a style="text-decoration: none; font-family: inherit;"
-                        href="/Home/Sair/" aria-expanded="false">Encerrar Sessão</a>
-                    </li>
-                </ul>
-
-
-                    <ul class="list-unstyled components">
-                    <li class="active">
-                            <a href="/HomeLogada/RankingGeral" aria-expanded="false">Ranking Geral</a>
-                    </li>
-                    
-                    <li>
-                            <a href="/HomeLogada/RankingPremium" aria-expanded="false">Ranking Premium</a>
-                    </li>
+                    <ul class="list-unstyled nav-menu pt-4 pb-4">
+                        <li>
+                            @if (Session["UserPessoaFisica"] != null)
+                            {
+                                <a href="/Comprador/UpdatePessoaFisica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
+                            }
+                            else if (Session["UserPessoaJuridica"] != null)
+                            {
+                                <a href="/Comprador/UpdatePessoaJuridica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
+                            }
+                            else if (Session["UserFornecedor"] != null)
+                            {
+                                <a href="/Fornecedor/UpdateFornecedor/?Cnpj=@Session["UserFornecedor"].ToString()" aria-expanded="false">Editar Perfil</a>
+                            }
+                        </li>
 
                         <li>
-                        <a href="/HomeLogada/Suporte" aria-expanded="false">Suporte</a>
-                    </li>
+                            <a href="/Comprador/UpdateSenha/" aria-expanded="false">Alterar Senha</a>
+                        </li>
 
-                    <li>
-                            @*<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>*@
+                        <li>
+                            <a href="/Home/Sair/" aria-expanded="false">Sair</a>
+                        </li>
+                    </ul>
 
+                    <ul class="list-unstyled nav-menu pt-4 pb-4">
+                        <li class="active">
+                            <a href="/HomeLogada/RankingGeral" aria-expanded="false">Ranking Geral</a>
+                        </li>
 
-                            @*@Html.ActionLink("Editar informações", "UpdatePessoaFisica", "Comprador", new { area = "" }, new { @class = "" })*@
+                        <li>
+                            <a href="/HomeLogada/RankingPremium" aria-expanded="false">Ranking Premium</a>
+                        </li>
+                    </ul>
 
-                    </li>
-                </ul>
-                
-                    @if (Session["UserFornecedor"] != null)
-                    {
-                    <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
-                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
-                    </a>
-                    
-                    }
-                    else
-                    {
-                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
-                    }
-                    
+                </div>
             </nav>
 
-
             <!---- Modal ---->
-            @*<div class="modal fade" id="myModal" role="dialog">
+            <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header" style="
@@ -169,7 +149,6 @@
                         <form method="post" action="../HomeLogada/Pesquisa">
                             <div class="modal-body">
                                 <p>Filtrar por:</p>
-
 
                                 <label style="margin-left: 4px;" class="container">
                                     Entrega
@@ -202,37 +181,86 @@
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-default">Concluir</button>
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-
                             </div>
                         </form>
                     </div>
                 </div>
-            </div>*@
-
-
-                    </div>
-
-        <div class="conteudo-logada row pl-5 pr-5 col-11" style="top: 105px;">
-            @RenderBody()
+            </div>
         </div>
 
-        <!-- jQuery CDN - Slim version (=without AJAX) -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <!-- Popper.JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-        <!-- Bootstrap JS -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+        <!-- INÍCIO - CONTEÚDO -->
+        <div class="row col-11 conteudo-logada pt-2 pl-4 pb-2">
+            @RenderBody()
 
-         <script src="~/Content/js/modal-avaliacao.js"></script>
-        <link href="~/Content/css/modal.css" rel="stylesheet" />
+            <!-- INÍCIO - RODAPÉ -->
+            <footer class="row col-12 ftco-footer footer-logado p-3">
+
+                <div class="row col-12 mb-4">
+                    <h4>Informações de Contato:</h4>
+                </div>
+
+                <div class="row col-12 mb-4">
+                    <div class="col-4 d-flex justify-content-center">
+                        <a href="">
+                            Av. da Saudade, 125 - Ponte Preta, Campinas - SP
+                        </a>
+                    </div>
+                    <div class="col-4 d-flex justify-content-center">
+                        <a href="">
+                            (19) 3231-2540
+                        </a>
+                    </div>
+                    <div class="col-4 d-flex justify-content-center">
+                        <a href="mailto:officialsranking@outlook.com">
+                            officialsranking@outlook.com
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row col-12">
+                    <div class="col-md-12 text-center">
+                        <p>
+                            Supplier Ranking &copy; <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados 
+                        </p>
+                        <p>
+                            Site desenvolvido por: <a href="/Home/SobreNos" target="_blank"> Laressa Assis | Luiz Gustavo | Marcelo Lemos | Valmir Junior</a>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+            <!-- FIM - RODAPÉ -->
+
+        </div>
+        <!-- FIM - CONTEÚDO -->
+
+       
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        @*<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>*@
+
+         
+        
        
       
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        @*<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">*@
+    
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>*@
+
+        <!-- INÍCIO - Script's de configuracao -->
+
+        @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
+        <script src="~/Scripts/jquery.mask.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <!-- FIM - Script's de configuracao -->
+
+        <!-- INÍCIO - Nossos JS -->
+        <script src="~/Content/js/modal-avaliacao.js"></script>
         <script>
             carregaFoto();
         </script>
