--- a/SupplierRanking/Views/Comprador/UpdatePessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdatePessoaFisica.cshtml
@@ -18,9 +18,11 @@
                 <p>@ViewBag.Message</p>
                 <!--- Campos do Comprador Fisico -->
                 <div>
-                    <input class="input" type="text" value="@Model.Codigo" name="codigo" readonly="readonly" style="background-color: gray">
+                    <input class="input" type="text" value="@Model.Codigo" name="codigo" readonly="readonly" style="visibility:hidden">
+                    <a name="codigo" style="margin-left:-110px;">@Model.Codigo</a>
                     <br /> <br />
-                    <input class="input" type="text" value="@Model.Cpf" name="cpf" readonly="readonly">
+                    <input class="input" type="text" value="@Model.Cpf" name="cpf" readonly="readonly" style="visibility:hidden">
+                    <a name="cpf" style="margin-left:-160px;">CPF: @Model.Cpf</a>
                     <br /> <br />
                     <input class="input" type="text" value="@Model.Nome" name="nome">
                     <br /> <br />
