--- a/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingInteresses.cshtml
@@ -9,7 +9,7 @@
 
     <div class="row justify-content-center text-center mt-4">
         <h2 style="color: #D0A748;font-weight: bold; text-shadow: 1px 2px 0px #6c6c6c;margin-bottom: 8rem;margin-top: 4rem;">
-            Esses são nossos Destaques da Semana!
+            Essas são as empresas da(s) sua(s) categoria(s)!
         </h2>
     </div>
 
@@ -237,39 +237,35 @@
                             </div>
                             <div class="col-5">
                                 <div class="d-flex align-items-baseline pl-3">
-
-                                    <div class="d-flex col-10 justify-content-around pl-5" style="margin-left:60px">
+                                    <h4>
+                                        @item.Media
+                                    </h4>
+                                    <div class="d-flex col-10 justify-content-around pl-5">
                                         <div>
-                                            <img src="~/Content/images/qualidade.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img />
                                             @item.Media_qualidade
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/atendimento.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img />
                                             @item.Media_atendimento
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/entrega.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img />
                                             @item.Media_entrega
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/preço.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img />
                                             @item.Media_preco
                                         </div>
 
                                         <div>
-                                            <img src="~/Content/images/satisfacao.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                            <img />
                                             @item.Media_satisfacao
                                         </div>
                                     </div>
-
-                                    <img src="~/Content/images/selo.png" height="120" width="150" style="position:absolute; margin-left:548px;margin-top:40px;"/>
-                                    <h3 style="position:absolute;margin-left:617px;margin-top:75px;color:black;text-shadow:0px 0px 10px black">
-                                        @item.Media
-                                    </h3>
-
                                 </div>
                                 <div>
                                     <h2 style="font-weight: bold;">
@@ -279,7 +275,6 @@
                                 <div>
                                     @item.Nome_categoria
                                 </div>
-                                <img src="~/Content/images/premium2.png" height="90" width="70" style="margin-left:-236px; margin-top:-222px;" />
                             </div>
                             <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
 
@@ -288,12 +283,11 @@
                                     @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
                                 </p>
                             </div>
-
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
                                 @if (Session["UserFornecedor"] == null)
                                 {
                                     @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                    <button id="@item.Cnpj" name="cnpj_fornecedor" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
+                                    <button id="@item.Cnpj" class="btn btn-info btn-lg" onclick="linkaCaixaContexto(this.id)">Avaliar</button>
                                 }
                                 <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
                             </div>
