--- a/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogado.cshtml
@@ -32,10 +32,10 @@
         <link rel="stylesheet" href="~/Content/config/css/style.css" />
         <link rel="stylesheet" href="~/Content/css/style.css">
         <link rel="stylesheet" href="~/Content/css/style_login.css" />
+        <link rel="stylesheet" href="~/Content/css/style_logada.css" />
         <link rel="stylesheet" href="~/Content/css/checkbox-home-logada.css" />
         <link rel="stylesheet" href="~/Content/config/css/avaliar-star.css" />
         <link rel="stylesheet" href="~/Content/css/modal.css" />
-        <link rel="stylesheet" href="~/Content/css/style_logada.css" />
 
         <!-- Logo da Aba -->
         <link rel="icon" href="~/Content/images/logo.png" type="image/x-icon" />
@@ -49,7 +49,7 @@
         <div>
 
             <!-- Barra de Pesquisa -->
-            <section class="row col-12 section-pesquisa d-flex justify-content-center align-items-center">
+            <section class="row col-12 section-pesquisa d-flex justify-content-center align-items-center m-0">
                 <nav class="col-7 navbar bg-light m-0">
                     <form class="row col-12" method="post" action="../HomeLogada/Pesquisa">
 
@@ -190,58 +190,53 @@
 
         <!-- INÍCIO - CONTEÚDO -->
         <div class="row col-11 conteudo-logada pt-2 pl-4 pb-2">
-            @RenderBody()
+             @RenderBody()
 
-            <!-- INÍCIO - RODAPÉ -->
-            <footer class="row col-12 ftco-footer footer-logado p-3">
+            <section class="row col-12" style="height: 100px;">
+                <!-- INÍCIO - RODAPÉ -->
+                <footer class="row col-12 ftco-footer footer-logado p-3">
 
-                <div class="row col-12 mb-4">
-                    <h4>Informações de Contato:</h4>
-                </div>
-
-                <div class="row col-12 mb-4">
-                    <div class="col-4 d-flex justify-content-center">
-                        <a href="">
-                            Av. da Saudade, 125 - Ponte Preta, Campinas - SP
-                        </a>
+                    <div class="row col-12 mb-4">
+                        <h4>Informações de Contato:</h4>
                     </div>
-                    <div class="col-4 d-flex justify-content-center">
-                        <a href="">
-                            (19) 3231-2540
-                        </a>
-                    </div>
-                    <div class="col-4 d-flex justify-content-center">
-                        <a href="mailto:officialsranking@outlook.com">
-                            officialsranking@outlook.com
-                        </a>
-                    </div>
-                </div>
 
-                <div class="row col-12">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            Supplier Ranking &copy; <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados 
-                        </p>
-                        <p>
-                            Site desenvolvido por: <a href="/Home/SobreNos" target="_blank"> Laressa Assis | Luiz Gustavo | Marcelo Lemos | Valmir Junior</a>
-                        </p>
+                    <div class="row col-12 mb-4">
+                        <div class="col-4 d-flex justify-content-center">
+                            <a href="">
+                                Av. da Saudade, 125 - Ponte Preta, Campinas - SP
+                            </a>
+                        </div>
+                        <div class="col-4 d-flex justify-content-center">
+                            <a href="">
+                                (19) 3231-2540
+                            </a>
+                        </div>
+                        <div class="col-4 d-flex justify-content-center">
+                            <a href="mailto:officialsranking@outlook.com">
+                                officialsranking@outlook.com
+                            </a>
+                        </div>
                     </div>
-                </div>
-            </footer>
-            <!-- FIM - RODAPÉ -->
 
+                    <div class="row col-12">
+                        <div class="col-md-12 text-center">
+                            <p>
+                                Supplier Ranking &copy;
+                                <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados
+                            </p>
+                            <p>
+                                Site desenvolvido por: <a href="/Home/SobreNos" target="_blank"> Laressa Assis | Luiz Gustavo | Marcelo Lemos | Valmir Junior</a>
+                            </p>
+                        </div>
+                    </div>
+                </footer>
+                <!-- FIM - RODAPÉ -->
+            </section>
         </div>
         <!-- FIM - CONTEÚDO -->
 
-       
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         @*<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>*@
-
-         
-        
-       
-      
 
         @*<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">*@
@@ -265,5 +260,4 @@
             carregaFoto();
         </script>
     </body>
-
 </html>
