Val - Atualização PDF Perfil

--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -46,10 +46,7 @@
                             }
                         }
 
-                        @if(Model.Pdf64 != "")
-                        {
-                            <a href="@Model.Pdf64"></a>
-                        }
+                        
                     </div>
                    
                     <h1 style="position: absolute;left: 41%;"></h1>
@@ -108,12 +105,22 @@
             <div style=" width: 1500px;height: 1471px;background-color: white;position: absolute;left: 195px;top: 83%;
             box-shadow: 1px 13px 20px black;">
 
-                <section>
+                 @if (Model.Pdf64 != "")
+                 {
+                <h2 style="position: absolute;left: 39%;">
+                    Arquivo PDF:
+                    @*<a href="~/HomeLogada/pdf/15222222222222/" target="_blank"><img src="~/Content/images/about.jpg" /></a>*@
+                    <a href="/HomeLogada/Pdf/?Id=@Model.Cnpj" target="_blank">
+                        <img src="~/Content/images/add-pdf.png" style="height:60px;width:60px" />
+                    </a>
+                </h2>
+                 }
 
-                        <h2 style="position: absolute;left: 39%;">Arquivo PDF</h2>
-                    @*@Model.Pdf*@
-                        
-                </section>
+
+
+
+
+
                 <h2 style="margin-top: 194px;margin-left: -120px;" class="w3-center">Galeria de fotos</h2>
               
                 
@@ -129,7 +136,7 @@
                 </div>
                 
                 
-               @if (ViewBag.ListaFotos != null)
+               @if (ViewBag.ListaFotos.Count != 0)
                {
                    int cont = 0;
                    foreach (var f in ViewBag.ListaFotos)
@@ -144,7 +151,7 @@
                 
                 <h2 style="margin-top: 246px;margin-left: 171px;color: black;">Comentários</h2>
                 <ul>
-                    @if (ViewBag.Comentarios != null)
+                    @if (ViewBag.Comentarios.Count != 0)
                     {
                         foreach (var h in ViewBag.Comentarios)
                         {
