--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -198,7 +198,7 @@
                                     <h1 style="margin-bottom: -48px;margin-left: 344px;font-size: 23px;">Comentário</h1>
                                     <br />
                                     <textarea name="comentario" style="margin-left: 161px;width:463px;height:77px;font-size:18px; resize:none; line-height:20px" ></textarea>
-                                    @*<input  id="cnpj" name="cnpj_fornecedor" value="" style="font-size: 10px;" readonly="readonly" />*@
+                                    <input name="cnpj_fornecedor" value="@item.Cnpj" style="font-size: 10px; visibility:hidden"/>
 
                                     <button type="submit" class="btn btn-info btn-lg ">Salvar</button>
                                 </div>
